--- a/package.json
+++ b/package.json
@@ -9,24 +9,30 @@
   },
   "dependencies": {
     "@emotion/react": "^11.4.1",
-    "parcel-bundler": "^1.12.4",
     "@material-ui/core": "^5.0.0-beta.5",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^6.0.5",
+    "@react-navigation/material-bottom-tabs": "^6.0.5",
+    "@react-navigation/material-top-tabs": "^6.0.2",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
     "expo": "~42.0.0",
     "expo-status-bar": "~1.0.4",
+    "parcel-bundler": "^1.12.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-grid-component": "^2.0.1",
+    "react-native-paper": "^4.9.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
+    "react-native-tab-view": "^3.1.1",
     "react-native-web": "~0.13.12",
     "react-native-webview": "^11.13.0",
+    "react-quiz-component": "^0.3.8",
+    "react-router-dom": "^5.3.0",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
